--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -171,7 +171,7 @@
 }
 
 .bg-cta-button{
-  background-image:url("/images/button/button-bg.png");
+  background-image:url("/images/button/button-bg.webp");
   background-size: contain;
   background-position: center;
   background-repeat:no-repeat;
